# aws_cluster_manager

./: Cargo.toml  flake.nix
src/: main.rs  sdk_wrapper.rs  user_data.sh
