[package]
name = "aws_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.7"
aws-sdk-ec2 = "1.23.0"
base64 = "0.22.0"
futures = "0.3.30"
jq-rs = "0.4.1"
regex = "1.10.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.114"
termion = "3.0.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8.11"
